modify tag syntax

--- a/_posts/2020-03-19-[Colab]-로컬-파일-업로딩-&-다운로딩.md
+++ b/_posts/2020-03-19-[Colab]-로컬-파일-업로딩-&-다운로딩.md
@@ -1,6 +1,6 @@
 ---
 title: "[Colab] 로컬파일 업로딩 & 다운로딩"
-Tag: colab, local file system, python
+Tags: [colab, python, 파일업로드]
 ---
 
 
