--- a/_posts/2020-03-22-[Python]-서울-종합변원-상권분석-#1.md
+++ b/_posts/2020-03-22-[Python]-서울-종합변원-상권분석-#1.md
@@ -59,9 +59,9 @@ plt.rc('font', family='NanumBarunGothic')
 
 ### 4. 파일데이터 불러오기
 
-- [로컬파일 불러오기]([https://hx2ryu.github.io/Colab-%EB%A1%9C%EC%BB%AC-%ED%8C%8C%EC%9D%BC-%EC%97%85%EB%A1%9C%EB%94%A9-&-%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%94%A9/](https://hx2ryu.github.io/Colab-로컬-파일-업로딩-&-다운로딩/))
+- [로컬파일 불러오기](https://hx2ryu.github.io/Colab-로컬-파일-업로딩-&-다운로딩/)
 
-- [구글 드라이브 연동]([https://hx2ryu.github.io/Colab-Google-Drive-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0/](https://hx2ryu.github.io/Colab-Google-Drive-연동하기/))
+- [구글 드라이브 연동](https://hx2ryu.github.io/Colab-Google-Drive-연동하기/)
 
 ```python
 df = pd.read_csv(file_path, low_memory=False)
@@ -171,5 +171,5 @@ df.describe(include='object') # 문자열 데이터
 
 ## Reference
 
-`[부스트코스_ 파이썬으로 시작하는 데이터 사이언스]`(https://www.edwith.org/boostcourse-ds-510)
+- [부스트코스_ 파이썬으로 시작하는 데이터 사이언스](https://www.edwith.org/boostcourse-ds-510)
 
