--- a/_posts/2020-03-22-[Python]-서울-종합변원-상권분석-#1.md
+++ b/_posts/2020-03-22-[Python]-서울-종합변원-상권분석-#1.md
@@ -155,7 +155,7 @@ df.describe(include='all') # 전체
 df.describe(include='number') # 수치형 데이터
 df.describe(include='object') # 문자열 데이터
 
-# top: 가장 많이 등장한 데이터, freq: top 데이터의 빈도수
+# unique: 중복을 제거한 값, top: 가장 많이 등장한 데이터, freq: top 데이터의 빈도수
 ```
 
 |        | 상호명 |   지점명 | 상권업종대분류코드 | 상권업종대분류명 | 상권업종중분류코드 |
@@ -167,9 +167,41 @@ df.describe(include='object') # 문자열 데이터
 
 
 
+- 그룹화한 수치 표현
+
+```python
+col_name_city = '시도명'
+
+# 시도별 Row수
+df[col_name_city].value_counts()
+```
+
+|      |   시도명   |  수   |
+| :--: | :--------: | :---: |
+|  0   |   경기도   | 21374 |
+|  1   | 서울특별시 | 18943 |
+|  2   | 부산광역시 | 6473  |
+|  3   |  경상남도  | 4973  |
+|  4   | 인천광역시 | 4722  |
+|  5   | 대구광역시 | 4597  |
+
+```python
+# 시도별 비율
+df[col_name_city].value_counts(normalize=True)
+```
+
+|      |   시도명   |  시도명  |
+| :--: | :--------: | :------: |
+|  0   |   경기도   | 0.234993 |
+|  1   | 서울특별시 | 0.208266 |
+|  2   | 부산광역시 | 0.071166 |
+|  3   |  경상남도  | 0.054675 |
+|  4   | 인천광역시 | 0.051915 |
+|  5   | 대구광역시 | 0.050541 |
+
 
 
 ## Reference
 
-- [부스트코스_ 파이썬으로 시작하는 데이터 사이언스](https://www.edwith.org/boostcourse-ds-510)
+- [[부스트코스] 파이썬으로 시작하는 데이터 사이언스](https://www.edwith.org/boostcourse-ds-510)
 
