--- a/_posts/2020-03-23-[Python]-서울-종합변원-상권분석-#2.md
+++ b/_posts/2020-03-23-[Python]-서울-종합변원-상권분석-#2.md
@@ -7,7 +7,9 @@ Tags: [python, 데이터 분석]
 
 ### 7. 데이터 색인
 
-- 유사의료업의 소분류명의 각 개수 알아보기
+##### 1) 조건 색인
+
+-  유사의료업의 소분류명의 각 개수 알아보기
 
 ```python
 df.loc[df['상권업종중분류명'] == '유사의료업', '상권업종소분류명'].value_counts()
@@ -46,6 +48,48 @@ df_seoul_pharmacy.head(7)[['상호명', '상권업종소분류명', '시도명']
 |           명약국 |             약국 | 서울특별시 |
 | 21세기신천지약국 |             약국 | 서울특별시 |
 |       우슬초약국 |             약국 | 서울특별시 |
+
+
+
+##### 2. 텍스트 색인
+
+```python
+df_seoul_hospital = df.loc[(df['상권업종소분류명'] == '종합병원') & (df['시도명'] == '서울특별시')]
+
+# 상호명에 '꽃배달/의료기/장례식장/상담소/어린이집'이 포함된 데이터의 인덱스 리스트
+drop_row1 = df_seoul_hospital.loc[df_seoul_hospital['상호명'].str.contains('꽃배달|의료기|장례식장|상담소|어린이집')].index.tolist()
+
+# 상호명이 '의원'으로 끝나는 데이터 색인 인덱스 리스트
+drop_rows2 = df_seoul_hospital.loc[df['상호명'].str.endswith('의원')].index.tolist()
+
+drop_all_rows = drop_row1 + drop_rows2
+
+```
+
+
+
+##### 3. 데이터 제거
+
+```python
+drop_all_rows = drop_row1 + drop_rows2
+df_seoul_hospital = df_seoul_hospital.drop(drop_all_rows, axis=0) 
+```
+
+​	
+
+
+
+### 8. 차트그리그
+
+- 서울시 구별 의료기관 분포
+
+```python
+# Seaborn으로 그리는 bar plot
+plt.figure(figsize=(15, 4))
+sns.countplot(data=df_seoul, x='시군구명')
+```
+
+![서울시 구별 의료기관 분포1](assets/seoul_district_barplot.png)
 
 
 
