--- a/_posts/2020-03-25-[재테크]-용어정리.md
+++ b/_posts/2020-03-25-[재테크]-용어정리.md
@@ -53,7 +53,7 @@ Tags: [주식, 펀드, 재테크, 금융]
 
 
 
-##### 6. 헤징
+##### 6. 헤지
 
 - 주가, 환율, 금리 등의 가격변동위험을 제거하여 손실을 방지하는 행위
 
@@ -101,7 +101,20 @@ Tags: [주식, 펀드, 재테크, 금융]
 
 
 
-##### 13. 헤지펀드(hedge fund)
+##### 13. 뮤추얼펀드(mutual fund)
 
-- 
+- 투자자금을 운용하는 투자회사의 
+
+
+
+##### 14. 윌셔(Wilshire)5000지수
+
+- 미국 5000대 기업 주가지수
+
+
+
+##### 15. 가산금리(Spread)
+
+- 신용도 등의 조건에 따라 기준금리에 덧 붙이는 금리를 말함
+- 신용도가 높으면 가산금리가 낮아지고 신용도가 낮아지면 가산금리가 높아진다.
 
