--- a/_posts/2020-03-23-[Python]-서울-종합변원-상권분석-#2.md
+++ b/_posts/2020-03-23-[Python]-서울-종합변원-상권분석-#2.md
@@ -1,5 +1,5 @@
 ---
-Title: "[Python] 서울 종합변원 상권분석 #2"
+title:"[Python] 서울 종합변원 상권분석 #2"
 Tags: [python, 데이터 분석]
 ---
 
@@ -79,12 +79,12 @@ df_seoul_hospital = df_seoul_hospital.drop(drop_all_rows, axis=0)
 
 
 
-### 8. 차트그리그
+### 8. 차트그리기
 
 - 서울시 구별 의료기관 분포
 
 ```python
-# Seaborn으로 그리는 bar plot
+# seaborn으로 그리는 bar plot
 plt.figure(figsize=(15, 4))
 sns.countplot(data=df_seoul, x='시군구명')
 ```
@@ -92,6 +92,23 @@ sns.countplot(data=df_seoul, x='시군구명')
 ![서울시 구별 의료기관 분포1](/assets/seoul_district_barplot.png)
 
 
+
+```python
+# pandas로 위/경도를 이용한 산점도 그리기
+df_seoul[['위도', '경도', '시군구명']].plot.scatter(x='경도', y='위도', figsize=(8, 7), grid=True)
+```
+
+![서울시 구별 의료기관 분포2](/assets/seoul_district_scatterplot1.png)
+
+
+
+```python
+# seaborn으로 위/경도를 이용한 산점도 그리기
+plt.figure(figsize=(9, 8))
+sns.scatterplot(data=df_seoul, x='경도', y='위도', hue='시군구명')
+```
+
+![서울시 구별 의료기관 분포3](/assets/seoul_district_scatterplot2.png)
 
 
 
