Update and rename 2020-03-07-[Git]-SSH키-사용-(In-Mac).md to 2020-03-07-github1.md

--- a/_posts/2020-03-07-github1.md
+++ b/_posts/2020-03-07-github1.md
@@ -1,6 +1,6 @@
 ---
-categories: git
-title: "[Git] SSH키 사용 (In Mac)" 
+categories: "Github"
+title: "[Github] SSH키 사용 (In Mac)" 
 tags: [git, github, ssh]
 ---
 
