modify src path

--- a/_posts/2020-04-30-KNN.md
+++ b/_posts/2020-04-30-KNN.md
@@ -106,7 +106,9 @@ for neighbor, ax in zip([1, 3, 9], axes):
 axes[0].legend(loc=3)
 ```
 
-![image-20200105153043128](/Users/hhryu/Library/Application Support/typora-user-images/image-20200105153043128.png)
+![Image](/assets/posting_src/knn-1.png)
+
+
 
 1) 1-Line
 
