--- a/_posts/2020-11-20-log4net.md
+++ b/_posts/2020-11-20-log4net.md
@@ -100,7 +100,7 @@ class Program
 
 #### 4. Reference
 
-[](https://gracefulprograming.tistory.com/122)
+[Peter's Blog](https://gracefulprograming.tistory.com/122)
 
-[](https://www.csharpstudy.com/Practical/Prac-log4net.aspx)
+[예제로 배우는 C# 프로그래밍](https://www.csharpstudy.com/Practical/Prac-log4net.aspx)
 
